--- a/src/app/modals/about-modal/about-modal.component.scss
+++ b/src/app/modals/about-modal/about-modal.component.scss
@@ -9,11 +9,11 @@
   .modal-header {
     transition: box-shadow 0.2s;
     box-shadow: none;
-  
+
     &.scrolled {
       box-shadow: var(--box-shadow);
     }
-  
+
     p {
       opacity: 0;
       transition: opacity 0.5s ease-in-out;
@@ -31,7 +31,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
   }
 
   .app-icon {
@@ -85,7 +84,6 @@
     height: 54px !important;
     width: 100%;
     box-shadow: var(--box-shadow);
-    
   }
   .stacked-buttons {
     display: flex;
@@ -136,6 +134,50 @@
       width: 94%;
       flex-grow: 1;
       padding-block-start: 16px;
+
+      .rclone-info {
+        
+        h3 {
+          margin-top: 0;
+          margin-bottom: 16px;
+        }
+        
+        .loading,
+        .error {
+          display: flex;
+          align-items: center;
+          gap: 8px;
+          margin: 16px 0;
+        }
+
+        .error {
+          color: var(--warn-color);
+        }
+        
+        .rclone-details {
+          margin-bottom: 16px;
+          padding-inline: 16px;
+          
+          .detail-row {
+            display: flex;
+            margin: 8px 0;
+            
+            &.warning {
+              color: var(--warn-color);
+              margin-top: 16px;
+            }
+
+            .detail-label {
+              font-weight: 500;
+              min-width: 100px;
+            }
+
+            .detail-value {
+              color: var(--text-secondary-color);
+            }
+          }
+        }
+      }
 
       a {
         color: var(--accent-color);
