--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -349,6 +349,7 @@ $rclone-manager-dark-theme: mat.m2-define-dark-theme(
     --button-hover: #dddddd;
     --theme-border: #dbdbdb;
     --faint-blue: #f0f8ff;
+    --about-dialog-button-color: #ffffff;
   }
 }
 
@@ -361,7 +362,7 @@ $rclone-manager-dark-theme: mat.m2-define-dark-theme(
     --app-background: #222226;
     --secondary-background: #000000;
     --sidebar-background: #050505;
-    --box-shadow: 0 0 0 1px rgba(32, 32, 36, 1), 0 0 4px 1px rgba(0, 0, 0, 0.25);
+    --box-shadow: 0 0 0 1px rgba(32, 32, 36, 1), 0 0 4px 1px rgba(0, 0, 0, 0.06);
     --selected-tab-color: #2f2f30;
     --hover-color: rgb(55, 55, 55);
     --app-text-color: #ffffff;
@@ -369,6 +370,7 @@ $rclone-manager-dark-theme: mat.m2-define-dark-theme(
     --button-hover: #333;
     --theme-border: #555;
     --faint-blue: #464d50;
+    --about-dialog-button-color: #333337;
   }
 }
 
